package io.zipcoder.casino.Interfaces;

public interface GamblingGameInterface {

    void payout();

    void takeBets();
}
