package io.zipcoder.casino.Interfaces;

public interface GamblingPlayer {

    void playerWager();

    void playWallet();
}
