package io.zipcoder.casino.Interfaces;

public interface Game {

    void handleTurns();

    void addPlayer();

    void removePlayer();
}
