package io.zipcoder.casino.utilities;

public class ConsoleInput {

    private Console console = new Console(System.in, System.out);


}
