package io.zipcoder.casino.utilities;


public class ConsoleOutput {

    private Console console = new Console(System.in, System.out);

}
